plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.13'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id 'com.github.spotbugs' version '6.0.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // Flyway for database migrations
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // OpenAPI/Swagger documentation
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'

    // Google
    implementation 'com.google.api-client:google-api-client:2.7.2'

    // JJWT dependencies for JWT token handling
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    compileOnly 'org.projectlombok:lombok'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    runtimeOnly 'org.postgresql:postgresql'

    annotationProcessor 'org.projectlombok:lombok'

    // Tests
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Map Structure
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // S3
    implementation platform('software.amazon.awssdk:bom:2.42.23')
    implementation 'software.amazon.awssdk:s3'

    // Redis
    implementation 'com.bucket4j:bucket4j-core:8.10.1'
    implementation 'com.bucket4j:bucket4j-redis:8.10.1'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // 2fa
    implementation 'com.warrenstrange:googleauth:1.5.0'

    // STOMP/Websockets
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
}


tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport

    testLogging {
        events "passed", "skipped", "failed"

        exceptionFormat "full"

        afterSuite { desc, result ->
            if (!desc.parent) {
                println "\n========================================"
                println "TEST RESULTS ${result.resultType}"
                println "Total tests: ${result.testCount}"
                println "Successful:  ${result.successfulTestCount}"
                println "Failed:      ${result.failedTestCount}"
                println "Skipped:     ${result.skippedTestCount}"
                println "========================================\n"
            }
        }
    }
}

jacoco {
    toolVersion = "0.8.14"
}

jacocoTestReport {
    dependsOn test

    reports {
        xml.required = false
        html.required = true
    }

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    'com/example/restaurant/models/**',
                    'com/example/restaurant/dto/**',
                    'com/example/restaurant/exceptions/**',
                    'com/example/restaurant/mappers/**',
                    'com/example/restaurant/config/**',
                    'com/example/restaurant/controllers/**',
                    'com/example/restaurant/commands/**',
                    'com/example/restaurant/enums/**',
                    'com/example/restaurant/seeder/**',
                    'com/example/restaurant/services/S3StorageService'
            ])
        }))
    }
}



spotbugs {
    toolVersion = '4.9.8'
    excludeFilter = file("spotbugs-exclude.xml")
}

tasks.withType(com.github.spotbugs.snom.SpotBugsTask) {
    reports {
        html.required = true
    }
    jvmArgs = ['-Dspotbugs.ignoreMissingClasses=true']
}

tasks.named('check') {
    dependsOn 'spotbugsMain'
}

tasks.withType(JavaCompile).configureEach {
    options.warnings = false
}